--- a/src/main/resources/com/main/datenpunk/main-view.fxml
+++ b/src/main/resources/com/main/datenpunk/main-view.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -18,9 +19,10 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="772.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.MainController">
    <center>
       <ScrollPane>
          <content>
@@ -86,7 +88,7 @@
                                           <Button onAction="#updateTable" text="Refresh" BorderPane.alignment="CENTER" />
                                        </right>
                                        <bottom>
-                                          <TableView fx:id="objectTable" onMouseClicked="#onTableClick" prefHeight="533.0" BorderPane.alignment="CENTER">
+                                          <TableView fx:id="objectTable" onMouseClicked="#onTableClick" prefHeight="900.0" BorderPane.alignment="CENTER">
                                             <columns>
                                                 <TableColumn fx:id="idColumn" prefWidth="30.0" text="id" />
                                               <TableColumn fx:id="nameColumn" minWidth="150.0" prefWidth="-1.0" text="Name" />
@@ -110,11 +112,29 @@
                <top>
                   <AnchorPane prefHeight="70.0" BorderPane.alignment="CENTER">
                      <children>
-                        <DatePicker fx:id="fromDatePicker" layoutX="14.0" layoutY="32.0" onAction="#getFromDate" />
+                        <DatePicker fx:id="fromDatePicker" layoutX="14.0" layoutY="32.0" onAction="#selectFromDate" onKeyPressed="#setCustom" onMouseClicked="#setCustom" />
                         <Label layoutX="14.0" layoutY="11.0" text="From:" />
-                        <DatePicker fx:id="toDatePicker" layoutX="197.0" layoutY="32.0" onAction="#getToDate" />
-                        <Button layoutX="380.0" layoutY="33.0" onAction="#onReset" text="Reset" />
+                        <DatePicker fx:id="toDatePicker" layoutX="197.0" layoutY="32.0" onAction="#selectToDate" onKeyPressed="#setCustom" onMouseClicked="#setCustom" />
+                        <Button layoutX="380.0" layoutY="33.0" onAction="#onResetDates" text="Reset" />
                         <Label layoutX="197.0" layoutY="11.0" text="To:" />
+                        <HBox layoutX="458.0" layoutY="33.0">
+                           <children>
+                              <ChoiceBox fx:id="presetBox" prefWidth="150.0" />
+                              <Button mnemonicParsing="false" onAction="#onNewPreset" prefHeight="25.0" prefWidth="25.0" text="+">
+                                 <HBox.margin>
+                                    <Insets left="3.0" right="3.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" onAction="#onDeletePreset" prefHeight="25.0" prefWidth="25.0" text="-" />
+                              <Button mnemonicParsing="false" onAction="#onResetPresets" text="Reset">
+                                 <HBox.margin>
+                                    <Insets left="3.0" right="3.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                        <Label layoutX="458.0" layoutY="11.0" text="Preset:" />
+                        <Separator layoutX="439.0" orientation="VERTICAL" prefHeight="69.0" prefWidth="7.0" />
                      </children>
                   </AnchorPane>
                </top>
