--- a/src/main/resources/com/main/datenpunk/newChart-view.fxml
+++ b/src/main/resources/com/main/datenpunk/newChart-view.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -14,6 +17,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.NewChartController">
@@ -109,6 +113,16 @@
                            </right>
                         </BorderPane>
                      </bottom>
+                     <center>
+                        <BarChart BorderPane.alignment="CENTER">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </BarChart>
+                     </center>
                   </BorderPane>
                </center>
                <left>
@@ -123,9 +137,10 @@
                               <ChoiceBox fx:id="ySelectionBox" prefHeight="25.0" prefWidth="150.0" />
                               <CheckBox fx:id="relativeCheck" mnemonicParsing="false" text="Relative">
                                  <VBox.margin>
-                                    <Insets top="5.0" />
+                                    <Insets bottom="5.0" top="5.0" />
                                  </VBox.margin>
                               </CheckBox>
+                              <CheckBox fx:id="pointCheck" mnemonicParsing="false" text="Show Points" />
                            </children>
                         </VBox>
                      </children>
@@ -151,7 +166,7 @@
                               </ChoiceBox>
                               <HBox fx:id="xToggle">
                                  <children>
-                                    <RadioButton mnemonicParsing="false" onAction="#onChooseX" selected="true" text="Accumulative">
+                                    <RadioButton mnemonicParsing="false" selected="true" text="Accumulative">
                                        <HBox.margin>
                                           <Insets right="5.0" />
                                        </HBox.margin>
@@ -159,7 +174,7 @@
                                           <ToggleGroup fx:id="xTypeGroup" />
                                        </toggleGroup>
                                     </RadioButton>
-                                    <RadioButton mnemonicParsing="false" onAction="#onChooseX" text="Range" toggleGroup="$xTypeGroup" />
+                                    <RadioButton mnemonicParsing="false" text="Range" toggleGroup="$xTypeGroup" />
                                  </children>
                               </HBox>
                               <HBox>
@@ -185,8 +200,8 @@
                               <Insets bottom="5.0" />
                            </VBox.margin>
                         </TextField>
-                        <ChoiceBox fx:id="seriesSelectionBox" prefHeight="25.0" prefWidth="200.0" />
-                        <TextField fx:id="comparatorField" visible="false">
+                        <ChoiceBox fx:id="seriesSelectionBox" prefHeight="25.0" prefWidth="205.0" />
+                        <TextField fx:id="comparatorField">
                            <VBox.margin>
                               <Insets top="5.0" />
                            </VBox.margin>
@@ -206,24 +221,35 @@
                            </center>
                         </BorderPane>
                         <ListView fx:id="seriesList" editable="true" onMouseClicked="#onSeriesListClick" prefHeight="200.0" prefWidth="200.0" />
-                        <ColorPicker fx:id="colorPicker" prefHeight="25.0" prefWidth="200.0">
+                        <ColorPicker fx:id="colorPicker" minHeight="25.0" prefHeight="25.0" prefWidth="205.0">
                            <VBox.margin>
                               <Insets top="5.0" />
                            </VBox.margin>
+                           <value>
+                              <Color />
+                           </value>
                         </ColorPicker>
                         <HBox alignment="CENTER">
                            <children>
                               <Button mnemonicParsing="false" onAction="#onChangeName" text="Set Name">
                                  <HBox.margin>
-                                    <Insets top="5.0" />
+                                    <Insets />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" onAction="#onChangeValue" text="SetValue">
+                                 <HBox.margin>
+                                    <Insets left="5.0" right="5.0" />
                                  </HBox.margin>
                               </Button>
                               <Button mnemonicParsing="false" onAction="#onChangeColor" text="Set Color">
                                  <HBox.margin>
-                                    <Insets left="5.0" top="5.0" />
+                                    <Insets />
                                  </HBox.margin>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
                         </HBox>
                      </children>
                      <BorderPane.margin>
