--- a/src/main/resources/com/main/datenpunk/newChart-view.fxml
+++ b/src/main/resources/com/main/datenpunk/newChart-view.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -114,14 +111,7 @@
                         </BorderPane>
                      </bottom>
                      <center>
-                        <BarChart BorderPane.alignment="CENTER">
-                          <xAxis>
-                            <CategoryAxis side="BOTTOM" />
-                          </xAxis>
-                          <yAxis>
-                            <NumberAxis side="LEFT" />
-                          </yAxis>
-                        </BarChart>
+                        <VBox fx:id="chartContainer" BorderPane.alignment="CENTER" />
                      </center>
                   </BorderPane>
                </center>
